maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if (al=1){
          ^RandomMouseMaze:8: error: type mismatch;
 found   : Unit
 required: Boolean
    } else if (al=2){
                 ^