maze.randommouse.RandomMouseMaze.scala.code
var al=0
override def run() {
  while (estSurBiscuit()==false){
    al=random3()
    if (al=1){
      droite()
    } else if (al=2){
      gauche()
    } else {
      if (estFaceMur()==false){
        avance()
      }else{
        random3()
      }
    }
  }
}
      